# repo-analyser

./: .gitignore  README.md  doc_agent.yaml  pyproject.toml
simple_doc_agent/: agents_orchestrator.py  analyser.py  doc_agent_tool.py  generated-docs.html  generated-docs.md  models.py  run.py
simple_doc_agent/all_agents/: CICD_analyser.py  constants.py  docker_files_analyser.py  document_generator.py  python_files_analyzer.py  repository_analyser.py  review_agent.py  security_analyser.py  security_auditor.py  test_coverage_analyzer.py
simple_doc_agent/docs/: quarcs.html  quarcs.md  seaglider-app.html  seaglider-app.md
simple_doc_agent/styles/: docs.css
simple_doc_agent/templates/: docs.html.j2  docs.md.j2
